force-app/main/default/objects/Account/fields/Number_of_Classes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Classes__c</fullName>
    <label>Number of Classes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>