force-app/main/default/objects/Account/fields/osf_QuantidadeTotalAssets__c.field-meta.xml
<CustomField>
    <fullName>osf_QuantidadeTotalAssets__c</fullName>
    <description>Número total de assets cadastrados para a livraria.</description>
    <inlineHelpText>Este campo é atualizado automaticamente quando um novo asset é criado ou excluído.</inlineHelpText>
    <label>Quantidade Total de Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>