force-app/main/default/objects/Account/fields/TesteFormatacao__c.field-meta.xml
<CustomField>
    <fullName>TesteFormatacao__c</fullName>
    <label>Teste formatação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>