force-app/main/default/objects/Account/recordTypes/osf_Livraria.recordType-meta.xml
<RecordType>
    <fullName>osf_Livraria</fullName>
    <active>true</active>
    <label>Livraria</label>
</RecordType>